# ai-text-editor

./: .gitignore  CLAUDE.md  README.md  backend.py  debug-paragraph.html  index.html  manifest.json  mkdocs.yml  pyproject.toml  script.js  styles.css  sw.js  test-custom-variables.html  test-export-sample.json  test-export.html  test-import.html  test-inspect-integration.html  test-paragraph-completion.html  test-prompt-ordering.html  test-provider-override.html  test-reset.html  test-sentence-model.html  test-syntax-change.js  test-syntax-in-browser.html  test-underscore-typing.html  test-underscores.html
.claude/: settings.local.json
.github/workflows/: claude-plan.yml
components/: AIService.js  ContextMenuManager.js  CustomVariablesManager.js  EditorManager.js  FeedbackAssociationManager.js  HistoryManager.js  ImportExportManager.js  InspectManager.js  LLMCallStorage.js  PromptPaletteManager.js  PromptsManager.js  SearchableDropdown.js  SentenceDataModel.js  SessionManager.js  SettingsManager.js  TextAnalysisManager.js  ThemeManager.js  UIManager.js  UsageTracker.js
docs/: index.md
docs/developer-guide/: api-reference.md  architecture.md  components.md
docs/user-guide/: ai-integration.md  features.md  getting-started.md
docs/user-guide/tabs/: feedback.md  history.md  inspect.md  prompts.md  settings.md  usage.md
plans/: 4.md  6.md
specs/: ai-integration.md  data-models-utilities.md  file-system.md  history-session.md  settings-configuration.md  user-interface.md
