[project]
name = "ai-text-editor"
version = "0.1.0"
description = "A modern web-based text editor with AI-powered suggestions and improvements using LLMs."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "mkdocs>=1.5.0",
    "mkdocs-material[imaging]>=9.4.0",
]
